# Meta-Layer-Harness-Knowledge-Base-Agents

./: README.md  main.py  pyproject.toml
agents/: daemon.py  knowledge_agent.py
config/: silra_api.yaml
docs/: deployment.md
goals/: goals.json
harness/: evaluator.py  observer.py
meta-layer-harness-git/: requirements.txt
meta-layer-harness-git/agents/: email_agent.py  goal_agent.py  reply_agent.py
meta-layer-harness-git/docs/: api.md  user-guide.md
meta-layer-harness-git/harness/: intervener.py
meta-layer-harness-git/knowledge-base/: README.md
meta-layer-harness-git/pipeline/: call1_relevance.py  call3_analysis.py
meta-layer-harness-git/storage/: decision_log.py  goal_store.py  knowledge_indexer.py  vector_store.py  wiki_link_parser.py
meta-layer-harness-git/tests/: test_call1.py  test_call3.py  test_e2e.py  test_knowledge_indexer.py  test_rule_injector.py
pipeline/: call2_embed.py
rules/: injection_points.yaml  rule_injector.py  rules.json
storage/: metadata_extractor.py
tests/: test_call2.py  test_circuit_breaker.py  test_conflict_detection.py
webui/: app.py
